--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,19 @@
-# === Wajib untuk UI Streamlit ===
-streamlit>=1.31.0
+# --- CORE STREAMLIT APP ---
+streamlit==1.32.0
 
-# === Pemrosesan array dan tensor ===
-numpy>=1.23.0
-torch>=2.0.0
+# --- TORCH dan Pytorch Image Quality Assessment ---
+torch==1.13.1
+pyiqa==0.1.6
 
-# === Untuk metrik evaluasi kualitas gambar (NIQE, PIQE, BRISQUE) ===
-pyiqa>=0.1.6
+# --- OpenCV untuk pemrosesan citra ---
+opencv-python-headless==4.7.0.72
 
-# === Pemrosesan gambar (tanpa GUI, cocok untuk cloud) ===
-opencv-python-headless>=4.5.5.62
+# --- Numerik dan utility ---
+numpy==1.23.5
+scipy==1.9.3
+scikit-image==0.19.3
+tifffile==2022.10.10
+Pillow==9.5.0
 
-# === Pendukung berbagai format file (jika ada) ===
-Pillow>=9.0.0
-
-# === Jika kamu ingin membaca file .tiff dengan berbagai jenis metadata (optional) ===
-tifffile>=2022.10.10
-
-# === Untuk keamanan file handling (optional) ===
-python-magic>=0.4.27
-
-# === Untuk compatibility lebih luas di cloud (optional protection) ===
-scikit-image>=0.19.0
-scipy>=1.9.0
+# --- Pandas untuk preset dan hasil evaluasi ---
+pandas==1.5.3
