--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-# Streamlit App
+# Core
 streamlit==1.32.0
-
-# Pytorch yang kompatibel dengan Python 3.12 dan pyiqa terbaru
 torch==2.2.2
 torchvision==0.17.2
 
-# Pyiqa terbaru (kompatibel dengan torch>=2.x)
+# Image Quality Assessment
 pyiqa==0.3.0
 
-# OpenCV untuk cloud
+# Image Processing
 opencv-python-headless==4.9.0.80
+scikit-image==0.22.0
+Pillow==10.3.0
+tifffile==2023.7.10
 
-# Utilitas
+# Data Manipulation
 numpy==1.26.4
 pandas==2.2.2
-scikit-image==0.22.0
-tifffile==2023.7.10
-Pillow==10.3.0
+
+# Streamlit enhancements
+matplotlib==3.8.4
