--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,13 @@
-# Core
 streamlit==1.32.0
 torch==2.2.2
 torchvision==0.17.2
-
-# Image Quality Assessment
-pyiqa==0.3.0
-
-# Image Processing
 opencv-python-headless==4.9.0.80
 scikit-image==0.22.0
 Pillow==10.3.0
 tifffile==2023.7.10
-
-# Data Manipulation
 numpy==1.26.4
 pandas==2.2.2
-
-# Streamlit enhancements
 matplotlib==3.8.4
+
+# install pyiqa dari github karena v0.3.0 belum ada di PyPI
+git+https://github.com/chaofengc/pyiqa.git@main
